Fix and a testcase for the Bug#54840