test/unit/bugs/bugs.h
@@ -35,6 +35,7 @@ public:
   {
     TEST_CASE(net_write_timeout39878);
     TEST_CASE(store_result_error_51562);
+    TEST_CASE(getResultSet_54840);
   }
 
   /**
@@ -50,6 +51,8 @@ public:
    * http://bugs.mysql.com/bug.php?id=51562
    */
   void store_result_error_51562();
+
+  void getResultSet_54840();
 };
 
 REGISTER_FIXTURE(bugs);
